--- a/WebApplication4/WebApplication4/Views/Ventas/VerDetalle.cshtml
+++ b/WebApplication4/WebApplication4/Views/Ventas/VerDetalle.cshtml
@@ -112,7 +112,7 @@
                 </div>
             </div>
         }
-        else
+        /*else
         {
             <div class="row form-group">
                 <label for="idEvento" class="control-label col-md-2">Fecha hasta Devolución:</label>
@@ -120,7 +120,7 @@
                     <input id="eventoN" type="text" class="form-control" value="@funcion.FechaDevolucion" disabled>
                 </div>
             </div>
-        }
+        }*/
     }
 
     <div class="row form-group">
@@ -173,51 +173,54 @@
         <h4>Resultados:</h4>
         <div class="row">
             <table id="mytable" class="table table-bordered table-hover">
-                @{
-                    if (axf.Count != 0)
-                    {//caso de numerados
-                        <thead>
-                            <tr class="active">
-                                <th>Ubicación Asiento.</th>
-                                <th>Estado</th>
-                                <th>Tipo Doc</th>
-                                <th>Doc Asociado</th>
-                                <th>Precio</th>
-                            </tr>
-                        </thead>
-                        <tbody id="tbody">
-                            @for (int x = 0; x < axf.Count; x++)
-                            {
-                                <tr id=@axf[x].codAsiento onclick="myFunction(this)">
-                                    <td>@("F:" + asientos[x].columna + ", C:" + asientos[x].fila)</td>
-                                    <td>@axf[x].estado</td>
-                                    <td>@axf[x].TipoDocAsociado</td>
-                                    <td>@axf[x].DocAsociado</td>
-                                    <td>@axf[x].PrecioPagado</td>
-                                </tr>
-                            }
-                        </tbody>
+                <thead>
+                    @{if (axf.Count != 0){//caso de numerados
+                        <tr class="active">
+                            <th>Codigo Asiento.</th>
+                            <th>Ubicación Asiento.</th>
+                            <th>Estado</th>
+                            <th>Tipo Doc</th>
+                            <th>Doc Asociado</th>
+                            <th>Precio</th>
+                        </tr>
                     }
-                    else // caso no numerado
+                    else
                     {
-                        <thead>
-                            <tr class="active">
-                                <th>Entrada</th>
-                                <th>Precio</th>
+                        <tr class="active">
+                            <th>Entrada</th>
+                            <th>Precio</th>
+                        </tr>
+                    }}
+                </thead>
+
+                <tbody id="tbody">
+                    @{if (axf.Count != 0)
+                        {
+                        for (int x = 0; x < axf.Count; x++)
+                        {
+                            <tr id=@axf[x].codAsiento onclick="myFunction(this)">
+                                <td>@axf[x].codAsiento</td>
+                                <td>@("F:" + asientos[x].columna + ", C:" + asientos[x].fila)</td>
+                                <td>@axf[x].estado</td>
+                                <td>@axf[x].TipoDocAsociado</td>
+                                <td>@axf[x].DocAsociado</td>
+                                <td>@axf[x].PrecioPagado</td>
                             </tr>
-                        </thead>
-                        <tbody id="tbody">
-                            <!--Deberia de mostrarse una fila menos cuando hace una dev parcial-->
-                            @for (int x = 0; x < dv.cantEntradas; x++)
-                            {
-                                <tr id=@dv.codDetalleVenta onclick="myFunction(this)">
-                                    <td>@("Entrada nro: " + (x + 1))</td>
-                                    <td>@(dv.total / dv.cantEntradas)</td>
-                                </tr>
-                            }
-                        </tbody>
+                        }
                     }
-                }
+                    else
+                    {
+								<!--Deberia de mostrarse una fila menos cuando hace una dev parcial-->
+                        for (int x = 0; x < dv.cantEntradas; x++)
+                        {
+                            <tr id=@dv.codDetalleVenta onclick="myFunction(this)">
+                                <td>@("Entrada nro: " + (x + 1))</td>
+                                <td>@(dv.total / dv.cantEntradas)</td>
+                            </tr>
+                        }
+                    }
+                    }
+
             </table>
         </div>
     </div>
@@ -265,11 +268,11 @@
             });
         }
 
-        function devolverParcial() {
-            var asiento = $('#idFila').val();
+        function devolverParcial() {            
+            var asiento = $('#idFila').val();           
             //var el = document.getElementById(detalle);
             //var row = $(el).closest('tr');
-            if (fila != "" && fla != null) {
+            if (asiento != "" && asiento != null) {
                 $.ajax({
                     url: '/Ventas/DevolverParcial/',
                     data: { asiento: asiento },
