--- a/WebApplication4/WebApplication4/Content/estilos-index1.css
+++ b/WebApplication4/WebApplication4/Content/estilos-index1.css
@@ -7,3 +7,12 @@ header{margin-bottom: 10px}
 #footer{background: #101010;height: 100px;color: white;text-align: center}
 .event{cursor: pointer}
 #logeado{display: none}
+.headDestacados {
+        background-color: #337AB7;
+        color: white;
+        padding: 5px 10px;
+        font-weight: bold;
+        font-family: sans-serif;
+        font-size: 17px;
+        height: 35px;
+    }
